# python-selenium-automation

./: poetry.lock.backup  pyproject.toml~HEAD  pytest.ini
pyproject.toml/: pyproject.toml
reports/: report.html
src/portal_automation/: main.py  requirements.txt  scraper.py
src/portal_automation/utils/: config.py  helper.py  logger.py  retry.py  waits.py
src/tests/: conftest.py  test_create_merchant.py.old  test_customer.py  test_login.py.old  test_merchants.py  test_payment_link_creation.py  test_payment_link_full_flow.py  test_product.py  test_transactions.py  test_transactions_list.py.old  test_utils.py
src/tests/data_generator/: address_data_generator.py  card_data_generator.py  customer_data.py  fake_data.py  payment_link_data.py  product_data.py
src/tests/downloads/: TRANSAÇÕES_2025-11-20_2025-11-27.csv
src/tests/locators/: customer_locators.py  dashboard_locators.py  login_locators.py  merchants_locators.py  payment_link_checkout_locators.py  payment_link_creation_locators.py  payment_link_list_locators.py  payment_link_modal_locators.py  product_locators.py  transactions_locators.py
src/tests/page_objects/: base_page.py  customer_form_page.py  customer_list_page.py  dashboard_page.py  login_page.py  merchants_page.py  payment_link_checkout_page.py  payment_link_creation_page.py  payment_link_list_page.py  product_form_page.py  product_list_page.py  transactions_page.py
src/tests/utils/: assertions.py  csv_validator.py
