[tool.poetry]
name = "portal_automation"
version = "0.1.0"
description = ""
authors = ["gabriel.duarte <gabriel.duarte@aditum.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15.0"
webdriver-manager = "^4.0.1"
pytest = "^7.4.0"
faker = "^20.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest-html = "^4.1.0"
pytest-xdist = "^3.5.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
